--- a/Practice/Practice/Practice.vcxproj
+++ b/Practice/Practice/Practice.vcxproj
@@ -140,6 +140,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="1.c" />
+	  <ClCompile Include="EX01.cpp" />
+	  <ClCompile Include="EX02.cpp" />
+	  <ClCompile Include="EX03.cpp" />
+	  <ClCompile Include="EX04.cpp" />
+	  <ClCompile Include="EX05.cpp" />
+	  <ClCompile Include="EX06.cpp" />
+	  <ClCompile Include="EX07.cpp" />
+
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
