--- a/Practice/Practice/Practice.vcxproj.filters
+++ b/Practice/Practice/Practice.vcxproj.filters
@@ -18,5 +18,23 @@
     <ClCompile Include="1.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="3.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="4.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="5.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="6.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="7.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
