--- a/Practice/Practice/Practice.vcxproj
+++ b/Practice/Practice/Practice.vcxproj
@@ -141,6 +141,8 @@
   <ItemGroup>
     <ClCompile Include="1.c" />
     <ClCompile Include="2.c" />
+    <ClCompile Include="20.c" />
+    <ClCompile Include="21.c" />
     <ClCompile Include="3.c" />
     <ClCompile Include="4.c" />
     <ClCompile Include="5.c" />
