--- a/Practice/Practice/Practice.vcxproj.filters
+++ b/Practice/Practice/Practice.vcxproj.filters
@@ -36,5 +36,11 @@
     <ClCompile Include="7.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="20.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="21.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
