--- a/Practice/Practice/Practice.vcxproj
+++ b/Practice/Practice/Practice.vcxproj
@@ -143,6 +143,10 @@
     <ClCompile Include="2.c" />
     <ClCompile Include="20.c" />
     <ClCompile Include="21.c" />
+    <ClCompile Include="22.c" />
+    <ClCompile Include="23.c" />
+    <ClCompile Include="24.c" />
+    <ClCompile Include="25.c" />
     <ClCompile Include="3.c" />
     <ClCompile Include="4.c" />
     <ClCompile Include="5.c" />
