--- a/Practice/Practice/Practice.vcxproj.filters
+++ b/Practice/Practice/Practice.vcxproj.filters
@@ -42,5 +42,17 @@
     <ClCompile Include="21.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="22.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="23.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="24.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="25.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
