--- a/Practice/Practice/Practice.vcxproj
+++ b/Practice/Practice/Practice.vcxproj
@@ -140,6 +140,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="1.c" />
+    <ClCompile Include="10.c" />
+    <ClCompile Include="11.c" />
+    <ClCompile Include="12.c" />
+    <ClCompile Include="15.c" />
+    <ClCompile Include="16.c" />
+    <ClCompile Include="17.c" />
+    <ClCompile Include="18.c" />
     <ClCompile Include="2.c" />
     <ClCompile Include="20.c" />
     <ClCompile Include="21.c" />
