--- a/Practice/Practice/Practice.vcxproj.filters
+++ b/Practice/Practice/Practice.vcxproj.filters
@@ -54,5 +54,26 @@
     <ClCompile Include="25.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="18.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="15.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="16.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="17.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="10.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="11.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="12.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
