--- a/Practice/Practice/Practice.vcxproj
+++ b/Practice/Practice/Practice.vcxproj
@@ -169,7 +169,12 @@
       <SDLCheck Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</SDLCheck>
     </ClCompile>
     <ClCompile Include="35.c" />
+    <ClCompile Include="36.c" />
+    <ClCompile Include="37.c" />
+    <ClCompile Include="38.c" />
+    <ClCompile Include="39.c" />
     <ClCompile Include="4.c" />
+    <ClCompile Include="40.c" />
     <ClCompile Include="5.c" />
     <ClCompile Include="6.c" />
     <ClCompile Include="7.c" />
