--- a/Practice/Practice/Practice.vcxproj.filters
+++ b/Practice/Practice/Practice.vcxproj.filters
@@ -93,5 +93,20 @@
     <ClCompile Include="35.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="36.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="37.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="38.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="39.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="40.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
