--- a/Practice/Practice/Practice.vcxproj
+++ b/Practice/Practice/Practice.vcxproj
@@ -181,6 +181,11 @@
     <ClCompile Include="39.c" />
     <ClCompile Include="4.c" />
     <ClCompile Include="40.c" />
+    <ClCompile Include="41.c" />
+    <ClCompile Include="42.c" />
+    <ClCompile Include="43.c" />
+    <ClCompile Include="44.c" />
+    <ClCompile Include="45.c" />
     <ClCompile Include="5.c" />
     <ClCompile Include="6.c" />
     <ClCompile Include="7.c" />
